--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm install -g pnpm@latest-10
 
       - name: 安装依赖
-        run: pnpm install --package-lock-only
+        run: pnpm install
 
       - name: 构建项目
         run: pnpm run build
